Registro Usuario Dropdown del header my account vista de my account direcciones vista de add address

--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -61,3 +61,10 @@
     height: 23px;
     text-align: center;
 }
+
+.boton-header{
+    border:none;
+    background-color: white;
+}
+
+input.invalid {box-shadow: 0 0 1px 1px red;}
