--- a/web/css/estilo.css
+++ b/web/css/estilo.css
@@ -68,3 +68,20 @@
 }
 
 input.invalid {box-shadow: 0 0 1px 1px red;}
+
+
+.pedido{
+    margin-left: -20px;
+}
+
+.pedido-item{
+    margin-left: 30px;
+}
+
+.division-total{
+    border-top: 2px solid #f3f2f2;
+}
+
+.primer-item{
+    margin-top: -15px;
+}
